--- a/index.html
+++ b/index.html
@@ -3,6 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <title>ARCHIVO</title>
+  
+   <!-- Open Graph / Social Preview -->
+  <meta property="og:title" content="Ana María Vargas — Portafolio" />
+  <meta property="og:description" content="Animación 2D y 3D, instalación audiovisual y experimentación digital." />
+  <meta property="og:image" content="https://anamaria17vargas-arch.github.io/Portfolio/preview.png" />
+  <meta property="og:url" content="https://anamaria17vargas-arch.github.io/Portfolio/" />
+  <meta property="og:type" content="website" />
+
+  <!-- Twitter / X -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Ana María Vargas — Portafolio" />
+  <meta name="twitter:description" content="Animación experimental y archivo visual." />
+  <meta name="twitter:image" content="https://anamaria17vargas-arch.github.io/Portfolio/preview.png" />
+  
   <style>
     body {
       margin: 0;
