--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-puedes agregar ese codigo del menu y tamaño de los botones, a este: <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8">
