--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ARCHIVO</title>
-  
+
   <!-- Open Graph / Social Preview -->
   <meta property="og:title" content="Ana María Vargas — Portafolio" />
   <meta property="og:description" content="Animación 2D, instalación audiovisual y experimentación digital." />
@@ -16,12 +17,12 @@
   <meta name="twitter:title" content="Ana María Vargas — Portafolio" />
   <meta name="twitter:description" content="Animación experimental y archivo visual." />
   <meta name="twitter:image" content="https://anamaria17vargas-arch.github.io/Portfolio/preview.gif" />
-  
+
   <style>
     body {
       margin: 0;
       background: black;
-      height: 100vh;
+      min-height: 100vh;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -56,14 +57,13 @@
       position: fixed;
       inset: 0;
       pointer-events: none;
-      background:
-        repeating-linear-gradient(
-          0deg,
-          rgba(255,255,255,0.02),
-          rgba(255,255,255,0.02) 1px,
-          transparent 1px,
-          transparent 2px
-        );
+      background: repeating-linear-gradient(
+        0deg,
+        rgba(255,255,255,0.02),
+        rgba(255,255,255,0.02) 1px,
+        transparent 1px,
+        transparent 2px
+      );
       opacity: 0.12;
       animation: scan 8s linear infinite;
       mix-blend-mode: overlay;
@@ -77,9 +77,8 @@
 
     /* ===== MARCO ===== */
     .marco {
-      width: 90vw;
-      height: 90vh;
-      background-color: #0d0d0d;
+      width: 1200px;
+      max-width: 90%;
       padding: 22px;
       box-sizing: border-box;
       border: 1px dotted white;
@@ -87,69 +86,21 @@
       z-index: 2;
     }
 
-    .marco::before {
-      content: "";
-      position: absolute;
-      inset: 6px;
-      border: 1px dotted rgba(255,255,255,0.4);
-      pointer-events: none;
-    }
-
-    .marco::after {
-      content: "";
-      position: absolute;
-      inset: 0;
-      background-image: url("https://grainy-gradients.vercel.app/noise.svg");
-      opacity: 0.07;
-      pointer-events: none;
-      mix-blend-mode: overlay;
-      animation: ruido 3s steps(2) infinite;
-    }
-
-    @keyframes ruido {
-      0% { transform: translate(0,0); }
-      50% { transform: translate(-1px,1px); }
-      100% { transform: translate(0,0); }
-    }
-
-    /* ===== HOJA ===== */
     .hoja {
       width: 100%;
-      height: 100%;
       background: black;
       border: 1px dotted white;
-      position: relative;
-      overflow: hidden;
+      padding: 10px;
+      box-sizing: border-box;
     }
 
     /* ===== BLOQUE CENTRAL ===== */
     .bloque-central {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
       text-align: center;
-    }
-
-    .polilla {
-      width: 60vw;
-      max-width: 650px;
-      image-rendering: pixelated;
-      opacity: 0.95;
-      animation: microglitch 14s infinite steps(1);
-      display: block;
+      max-width: 900px;
       margin: 0 auto;
-      filter: drop-shadow(0 0 8px rgba(255,255,255,0.8));
     }
 
-    @keyframes microglitch {
-      0%   { transform: translate(0,0); }
-      97%  { transform: translate(0,0); }
-      98%  { transform: translate(-1px,1px); }
-      100% { transform: translate(0,0); }
-    }
-
-    /* ===== TEXTOS ===== */
     .entrada {
       font-size: 24px;
       letter-spacing: 6px;
@@ -158,20 +109,13 @@
       color: white;
     }
 
-    .porcelanita {
-      font-size: 14px;
-      letter-spacing: 4px;
-      margin: 5px 0;
-      color: white;
-      font-family: "Times New Roman", Georgia, serif;
-    }
-
     .nombre {
       font-size: 16px;
       letter-spacing: 2px;
       margin: 5px 0;
       color: white;
       font-family: "Times New Roman", Georgia, serif;
+      font-weight: bold;
     }
 
     .registro {
@@ -184,20 +128,22 @@
     /* ===== MENÚ ===== */
     .menu {
       display: flex;
-      justify-content: center;
-      gap: 18px;
-      flex-wrap: wrap;
+      flex-direction: column;   /* BOTONES UNO BAJO OTRO */
+      align-items: center;
+      gap: 10px;
     }
 
     .menu a {
+      font-size: 10px;         /* MÁS PEQUEÑOS */
+      padding: 8px 12px;
       background: white;
       color: black;
-      padding: 10px 18px;
       text-decoration: none;
-      font-size: 11px;
       letter-spacing: 2px;
       font-family: "Times New Roman", Georgia, serif;
       border: 1px dotted white;
+      width: 160px;            /* ancho uniforme vertical */
+      text-align: center;
     }
 
     .menu a:hover {
@@ -205,21 +151,23 @@
       color: white;
     }
 
-    /* =====================================
-       ✦ SOLO PC DE PANTALLA MÁS PEQUEÑA
-       (sin tocar celular ni PC grande)
-       ===================================== */
-    @media (min-width: 769px) and (max-width: 1100px) {
-
+    /* ✦ PCs con pantallas más pequeñas ✦ */
+    @media (max-width: 1366px) {
       .polilla {
-        max-width: 480px;     /* polilla más pequeña */
+        width: 300px;          /* POLILLA MÁS PEQUEÑA SOLO AQUÍ */
       }
 
       .menu a {
-        padding: 8px 14px;    /* botones reducidos */
-        font-size: 10px;
+        width: 140px;
+        font-size: 9px;
       }
+    }
 
+    /* ✦ Celular ✦ */
+    @media (max-width: 768px) {
+      .polilla {
+        width: 280px;         /* SE CONSERVA COMO QUERÍAS */
+      }
     }
 
   </style>
@@ -227,22 +175,64 @@
 
 <body>
 
+  <!-- ===== PARTÍCULAS COMPLETAS ===== -->
   <div class="particulas">
-    <div class="particula" style="left:2%; animation-duration:16s; animation-delay:-3s;"></div>
+
+  <div class="particula" style="left:2%; animation-duration:16s; animation-delay:-3s;"></div>
+  <div class="particula" style="left:5%; width:1px; height:1px; animation-duration:18s; animation-delay:-9s;"></div>
+  <div class="particula" style="left:8%; width:2px; height:2px; animation-duration:14s; animation-delay:-5s;"></div>
+  <div class="particula" style="left:11%; animation-duration:20s; animation-delay:-12s;"></div>
+  <div class="particula" style="left:14%; width:1px; height:1px; animation-duration:22s; animation-delay:-7s;"></div>
+
+  <div class="particula" style="left:18%; animation-duration:16s; animation-delay:-10s;"></div>
+  <div class="particula" style="left:21%; width:3px; height:3px; animation-duration:18s; animation-delay:-4s;"></div>
+  <div class="particula" style="left:24%; width:1px; height:1px; animation-duration:14s; animation-delay:-8s;"></div>
+  <div class="particula" style="left:27%; animation-duration:20s; animation-delay:-15s;"></div>
+  <div class="particula" style="left:30%; width:2px; height:2px; animation-duration:22s; animation-delay:-6s;"></div>
+
+  <div class="particula" style="left:34%; animation-duration:16s; animation-delay:-11s;"></div>
+  <div class="particula" style="left:37%; width:1px; height:1px; animation-duration:18s; animation-delay:-5s;"></div>
+  <div class="particula" style="left:40%; width:2px; height:2px; animation-duration:14s; animation-delay:-9s;"></div>
+  <div class="particula" style="left:43%; animation-duration:20s; animation-delay:-13s;"></div>
+  <div class="particula" style="left:46%; width:1px; height:1px; animation-duration:22s; animation-delay:-7s;"></div>
+
+  <div class="particula" style="left:50%; animation-duration:16s; animation-delay:-4s;"></div>
+  <div class="particula" style="left:53%; width:2px; height:2px; animation-duration:18s; animation-delay:-10s;"></div>
+  <div class="particula" style="left:56%; width:1px; height:1px; animation-duration:14s; animation-delay:-6s;"></div>
+  <div class="particula" style="left:59%; animation-duration:20s; animation-delay:-14s;"></div>
+  <div class="particula" style="left:62%; width:2px; height:2px; animation-duration:22s; animation-delay:-8s;"></div>
+
+  <div class="particula" style="left:66%; animation-duration:16s; animation-delay:-12s;"></div>
+  <div class="particula" style="left:69%; width:1px; height:1px; animation-duration:18s; animation-delay:-5s;"></div>
+  <div class="particula" style="left:72%; width:2px; height:2px; animation-duration:14s; animation-delay:-9s;"></div>
+  <div class="particula" style="left:75%; animation-duration:20s; animation-delay:-15s;"></div>
+  <div class="particula" style="left:78%; width:1px; height:1px; animation-duration:22s; animation-delay:-7s;"></div>
+
+  <div class="particula" style="left:82%; animation-duration:16s; animation-delay:-6s;"></div>
+  <div class="particula" style="left:85%; width:2px; height:2px; animation-duration:18s; animation-delay:-11s;"></div>
+  <div class="particula" style="left:88%; width:1px; height:1px; animation-duration:14s; animation-delay:-4s;"></div>
+  <div class="particula" style="left:91%; animation-duration:20s; animation-delay:-13s;"></div>
+  <div class="particula" style="left:94%; width:2px; height:2px; animation-duration:22s; animation-delay:-8s;"></div>
+
   </div>
 
+  <!-- GLITCH -->
   <div class="glitch-global"></div>
 
   <div class="marco">
     <div class="hoja">
+
+      <div class="titulo-marco">ARCHIVO VISUAL / ANIMACIÓN EXPERIMENTAL</div>
 
       <div class="bloque-central">
         <img src="img/polilla.png" class="polilla" alt="Polilla">
 
         <div class="entrada">INICIO</div>
         <div class="porcelanita">PORCELANITA</div>
+
         <div class="nombre">ANA MARÍA VARGAS</div>
-        <div class="registro">REGISTRO ABIERTO – ARCHIVO EN USO</div>
+
+        <div class="registro">REGISTRO ABIERTO — ARCHIVO EN USO</div>
 
         <div class="menu">
           <a href="error_404.html">ERROR_404</a>
@@ -260,5 +250,4 @@
 
 </body>
 </html>
-
 
